robots.txt 세팅 및 코드 리팩토링

--- a/todolist/package.json
+++ b/todolist/package.json
@@ -17,6 +17,7 @@
     "vue": "latest"
   },
   "dependencies": {
+    "@nuxtjs/robots": "^3.0.0",
     "@pinia/nuxt": "^0.4.11",
     "mysql2": "^3.3.3",
     "pinia": "^2.1.3"
